--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "firebase/php-jwt": "^6.3",
         "dompdf/dompdf": "^1.0",
-        "phpmailer/phpmailer": "^6.6"
+        "phpmailer/phpmailer": "^6.6",
+        "vlucas/phpdotenv": "^5.5"
     }
 }
