--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
+        "php": ">=7.4",
         "firebase/php-jwt": "^6.3",
         "dompdf/dompdf": "^1.0",
         "phpmailer/phpmailer": "^6.6",
