--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,12 @@
         "dompdf/dompdf": "^1.0",
         "phpmailer/phpmailer": "^6.6",
         "vlucas/phpdotenv": "^5.5"
-    }
+    },
+    "config": {
+		"optimize-autoloader": true,
+		"prepend-autoloader": false,
+		"platform": {
+			"php": "7.4"
+		}
+	}
 }
