--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,7 +1,7 @@
 FROM php:7.4-apache
 RUN apt-get update && apt upgrade -y
 RUN docker-php-ext-install mysqli pdo pdo_mysql && docker-php-ext-enable mysqli
-ADD ./ /var/www/html
+ADD ./app /var/www/html
 COPY ./app/my-site.conf /etc/apache2/sites-available/my-site.conf
 RUN echo 'SetEnv MYSQL_DB_CONNECTION ${MYSQL_DB_CONNECTION}' >> /etc/apache2/conf-enabled/environment.conf
 RUN echo 'SetEnv MYSQL_DB_NAME ${MYSQL_DB_NAME}' >> /etc/apache2/conf-enabled/environment.conf
